# NTE_IMAGING_PIPELINES

./: .dockerignore  .gitignore  .~lock.test_targets.csv#  Dockerfile  EP250108A_g'.head  EP250421a.head  EP250421a_r'.head  EP250421a_z'.head  EP260131a.head  EP260131a_z'.head  GRB250129A_r'.head  GRB250327A_r'.head  GRB250327B_r'.head  GRB250404A.head  GRB250404A_r'.head  GRB250404A_r.head  GRB250404A_z'.head  GRB250404A_z.head  IO.py  NOTcam.py  README.md  TODO.txt  alfosc.py  bias_prot.py  datatypes.py  default.sex  dist-map_H.head  instruments.py  logger.py  median_plot.py  photometric_calibs.py  reduction.py  reduction_new.py  requirements.txt  run.py  run1.param  scamp.conf  setup.cfg  sky_decision.uxf  sn2021xel_H.head  (+4 more)
ALFOSC_one_target/: flat_plain_test.py
EP250108A/: swarp.xml
GRB250129A/: default.sex  run1.param
NOTCAM_one_target/: flat_configurations.json  setup_table.json
NOTCAM_one_target/master_flats/bad_pixel_masks/: bad_pixel_mask_flat_000.fits
SEX_TEST/: reduced_science_ALJa300320.fits
docker/: Dockerfile  requirements.txt
docker_container/: Dockerfile  main.py
notcam_dither_sky_demo/: skysub_notcam.odp
scamp_files/: default.conf  notcam.conf
sn2021xel/: NCIe110155_h1.txt  coadd_h0.txt  swarp.xml
source_extractor_files/: alfosc.sex  default.sex  notcam.sex  output.param
src/: GRB250404A_r'.head  GRB250404A_z'.head  IO.py  datatypes.py  dist-map_H.head  instruments.py  logger.py  photometric_calibs.py  reduction.py  run.py  sn2021xel_H.head  sorting.py
swarp_files/: alfosc.swarp
(+3 files in other folders)
