[metadata]
name = nte_imaging_pipeline
author = Kostas Valeckas
version = 0.0.1
author_email = kostas.valeckas@nbi.ku.dk
description = Code developed as a part of the Masters` thesis project by Kostas Valeckas, NBI and Nordic Optical Telescope.
long_description = file: README.md
license = MIT
license_files = LICENSE.txt
project_urls =
    Source = https://github.com/KostasValeckas/NTE_IMAGING_PIPELINES
    Tracker = https://github.com/KostasValeckas/NTE_IMAGING_PIPELINES/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.11
install_requires =
    setuptools
    ccdproc==2.5.1
    astropy==6.0.0
    numpy>=1.24
    matplotlib==3.10.9
    astroscrappy==1.3.0
    colorama==0.4.6
    astroquery==0.4.11

# source layout: modules live under src/ as plain modules (not a package)
package_dir =
    = src

py_modules =
    datatypes
    instruments
    IO
    logger
    photometric_calibs
    reduction
    run
    sorting

include_package_data = True

[options.entry_points]
console_scripts =
    run_img_pipeline = run:main